--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.2.1",
     "firebase": "^10.13.1",
     "lucide-react": "^0.438.0",
+    "moments": "^0.0.2",
     "next-themes": "^0.3.0",
     "postcss": "^8.4.45",
     "react": "^18.3.1",
